# minimal-mkdocs-pydantic-bug-repo

./: actual_griffe_dump.json  dump.json  pyproject.toml
src/pydantic_settings_mre/: module.py  settings.py
