[project]
name = "pydantic-settings-mre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "andrew@protopia.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "griffe-pydantic==1.1.6",
    "mkdocstrings[python]==0.30.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
]


[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
